# drift-watcher

./: README.md  pyproject.toml
driftwatch/: __init__.py
driftwatch/alerts/: __init__.py  base.py  file.py  slack.py
driftwatch/core/: __init__.py  report.py  snapshot.py  watcher.py
driftwatch/diff/: __init__.py  engine.py  formatters.py
driftwatch/sources/: __init__.py  base.py  file.py  gcp.py  kubernetes.py
tests/: test_diff.py  test_sources.py
tests/fixtures/: baseline.yaml  current.yaml  invalid.yaml
